# PHL_electricity_prices

./: .gitignore  pyproject.toml
capacity/map/: README.md
capacity/map/outputs/: philippines_generator_map.html
capacity/map/src/: build_philippines_generator_map.py
capacity/outputs/: country_fleet_age_summary.csv  country_generation_mix_summary.csv  country_total_weighted_age_summary.csv  ownership_concentration_summary.csv  philippines_island_age_summary.csv  philippines_island_mix_summary.csv
capacity/outputs/csv/: country_fleet_age_summary.csv  country_total_operating_capacity_mw.csv
capacity/src/: analyze_power_plants.py
consumption_2024/outputs/: monthly_power_consumption_long.csv  monthly_power_consumption_validation_checks.csv
consumption_2024/outputs/csv/: monthly_power_consumption_wide.csv
consumption_2024/src/: process_consumption_pdf.py
iemop/outputs/csv/: lwap_prices_monthly.csv  lwap_prices_validation_checks.csv  market_transactions_monthly.csv  market_transactions_validation_checks.csv
iemop/src/: process_iemop_pdfs.py
iemop_market_transactions_2021_2025/: README.md
iemop_market_transactions_2021_2025/outputs/csv/: market_transactions_monthly_latest.csv  market_transactions_overlap_checks.csv  market_transactions_raw_overlap_rows.csv  parse_issues.csv  reports_index_2021_2025.csv  sample_reports_used_for_overlap.csv  sample_variable_overlap_matrix.csv
iemop_market_transactions_2021_2025/src/: make_qc_plots.py  scrape_market_transactions.py
